# rlitert-lm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: basic_usage.rs  mcp_server.rs  openai_api_server.rs  process_pool.rs
src/: binary.rs  lib.rs  main.rs  manager.rs  mcp.rs  process.rs  server.rs
tests/: README.md  dspy_integration_test.rs  openai_api_test.rs
tests/mcp-tests/: README.md  main.py  pyproject.toml  test_manual.py  test_mcp_client.py  test_mcp_download.py  test_mcp_download_quick.py  test_mcp_resources.py  test_mcp_sse.py  test_raw.sh  test_simple.py
